# ShaderStartUp

./: .gitignore  CMakeLists.txt  README.md
OpenGLShaderStartUp/: CMakeLists.txt
OpenGLShaderStartUp/OpenGLShaderStartUp/: CMakeLists.txt  OpenGLShaderStartUp.cpp  OpenGLShaderStartUp.h
UnityShaderStartup/: .gitignore
UnityShaderStartup/Assets/Samples/Shader Graph/14.0.11/Production Ready Shaders/Environment/Rock/Materials/: Rock_Small_LOD0.mat
UnityShaderStartup/Assets/Samples/Shader Graph/14.0.11/Production Ready Shaders/Environment/Water/: Water.mat  WaterSimple_FoamMask.shadergraph
UnityShaderStartup/Assets/Samples/Shader Graph/14.0.11/Production Ready Shaders/Lit/: URP Lit Emissive Detail.mat  URP Lit.mat
UnityShaderStartup/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset
src/: main.cpp
